name:                hanabi
version:             0.1.0.0
synopsis:            A websockets version of the board game hanabi
description:         Please see README.md
homepage:            https://github.com/dat2/hanabi#readme
license:             BSD3
license-file:        LICENSE
author:              Nicholas Dujay
maintainer:          nickdujay@gmail.com
copyright:           Copyright: (c) 2016 Nicholas Dujay
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GameTypes
                     , ServerTypes
                     , WebSocketTypes
                     , GameState
                     , ServerState
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , datetime
                     , elm-bridge
                     , old-time
                     , lens
                     , mtl
                     , random
                     , random-shuffle
                     , text
                     , websockets
  default-language:    Haskell2010

executable hanabi-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       WebSocketServer
                     , Control.Monad.Exception
                     , Control.Monad.Supply
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hanabi
                     , aeson
                     , bytestring
                     , containers
                     , datetime
                     , dotenv
                     , lens
                     , mtl
                     , text
                     , transformers
                     , websockets
  default-language:    Haskell2010

executable hanabi-generate-elm
  hs-source-dirs:       generate
  main-is:              Main.hs
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-depends:        base
                      , hanabi
                      , directory
                      , elm-bridge
                      , filepath
                      , MissingH
  default-language:     Haskell2010

test-suite hanabi-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hanabi
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dat2/hanabi
